WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192205
Safe browsing warning should respect text size from settings
https://bugs.webkit.org/show_bug.cgi?id=192205
Summary
Safe browsing warning should respect text size from settings
Alex Christensen
Reported
2018-11-29 17:16:14 PST
Safe browsing warning should respect text size from settings
Attachments
Patch
(4.56 KB, patch)
2018-11-29 17:17 PST
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-11-29 17:17:26 PST
Created
attachment 356098
[details]
Patch
Alex Christensen
Comment 2
2018-12-08 17:56:18 PST
http://trac.webkit.org/r239014
rdar://problem/46352947
Radar WebKit Bug Importer
Comment 3
2018-12-08 17:57:29 PST
<
rdar://problem/46577765
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug