Safe browsing warning should respect text size from settings https://bugs.webkit.org/show_bug.cgi?id=192205

Reviewed by Tim Horton.

* UIProcess/Cocoa/WKSafeBrowsingWarning.mm:
(fontWithSize):
(makeButton):
(-[WKSafeBrowsingWarning addContent]):
(-[WKSafeBrowsingWarning showDetailsClicked]):



Canonical link: https://commits.webkit.org/207109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239014 268f45cc-cd09-0410-ab3c-d52691b4dbfc